--- a/POS-master/POS-master/POS/src/lk/ijse/pos/view/ManageCustomerForm.fxml
+++ b/POS-master/POS-master/POS/src/lk/ijse/pos/view/ManageCustomerForm.fxml
@@ -1,18 +1,18 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import com.jfoenix.controls.JFXButton?>
-<?import com.jfoenix.controls.JFXTextField?>
 <?import javafx.scene.Cursor?>
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.shape.Rectangle?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane fx:id="root" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="612.0" prefWidth="654.0" style="-fx-background-color: white;" stylesheets="@/lk/ijse/pos/view/style/managecustomerform.css" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="lk.ijse.pos.controller.ManageCustomerFormController">
+<AnchorPane fx:id="root" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="612.0" prefWidth="654.0" style="-fx-background-color: white;" stylesheets="@/lk/ijse/pos/view/style/managecustomerform.css" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="lk.ijse.pos.controller.ManageCustomerFormController">
    <children>
       <Rectangle arcHeight="5.0" arcWidth="5.0" fill="WHITE" height="80.0" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" width="654.0" />
       <ImageView id="imgHome" fitHeight="53.0" fitWidth="55.0" layoutX="22.0" layoutY="14.0" onMouseClicked="#navigateToHome" pickOnBounds="true" preserveRatio="true">
@@ -28,12 +28,6 @@
             <Font name="System Bold" size="24.0" />
          </font>
       </Label>
-      <JFXButton id="btnAddNewCustomer" layoutX="503.0" layoutY="25.0" onAction="#btnAddNewCustomer_OnAction" prefHeight="46.0" prefWidth="137.0" text="Add New Customer" />
-      <JFXTextField fx:id="txtCustomerId" labelFloat="true" layoutX="17.0" layoutY="118.0" prefHeight="28.0" prefWidth="615.0" promptText="Customer ID :" />
-      <JFXTextField fx:id="txtCustomerName" labelFloat="true" layoutX="17.0" layoutY="164.0" prefHeight="28.0" prefWidth="615.0" promptText="Customer Name :" />
-      <JFXTextField fx:id="txtCustomerAddress" labelFloat="true" layoutX="17.0" layoutY="212.0" prefHeight="28.0" prefWidth="615.0" promptText="Customer Address :" />
-      <JFXButton id="btnSave" layoutX="265.0" layoutY="278.0" onAction="#btnSave_OnAction" prefHeight="28.0" prefWidth="58.0" text="Save" />
-      <JFXButton id="btnDelete" layoutX="333.0" layoutY="278.0" onAction="#btnDelete_OnAction" text="Delete" />
       <TableView fx:id="tblCustomers" layoutX="22.0" layoutY="316.0" prefHeight="285.0" prefWidth="615.0">
         <columns>
           <TableColumn prefWidth="97.0" text="Customer ID" />
@@ -41,5 +35,11 @@
             <TableColumn prefWidth="282.0" text="Customer Address" />
         </columns>
       </TableView>
+      <Button layoutX="471.0" layoutY="27.0" mnemonicParsing="false" onAction="#btnAddNewCustomer_OnAction" text="Add New Customer" />
+      <TextField fx:id="txtCustomerId" layoutX="28.0" layoutY="111.0" prefHeight="31.0" prefWidth="233.0" promptText="Customer ID :" />
+      <TextField fx:id="txtCustomerName" layoutX="28.0" layoutY="160.0" prefHeight="31.0" prefWidth="233.0" promptText="Customer name:" />
+      <TextField fx:id="txtCustomerAddress" layoutX="28.0" layoutY="212.0" prefHeight="31.0" prefWidth="233.0" promptText="Customer address:" />
+      <Button layoutX="266.0" layoutY="260.0" mnemonicParsing="false" onAction="#btnSave_OnAction" text="Save" />
+      <Button layoutX="340.0" layoutY="260.0" mnemonicParsing="false" onAction="#btnDelete_OnAction" text="Delete" />
    </children>
 </AnchorPane>
