--- a/POS-master/POS-master/POS/src/lk/ijse/pos/view/ManageItemForm.fxml
+++ b/POS-master/POS-master/POS/src/lk/ijse/pos/view/ManageItemForm.fxml
@@ -1,17 +1,17 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import com.jfoenix.controls.JFXButton?>
-<?import com.jfoenix.controls.JFXTextField?>
 <?import javafx.scene.Cursor?>
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane fx:id="root" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="625.0" prefWidth="654.0" style="-fx-background-color: white;" stylesheets="@/lk/ijse/pos/view/style/manageitemform.css" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="lk.ijse.pos.controller.ManageItemFormController">
+<AnchorPane fx:id="root" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="625.0" prefWidth="654.0" style="-fx-background-color: white;" stylesheets="@/lk/ijse/pos/view/style/manageitemform.css" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="lk.ijse.pos.controller.ManageItemFormController">
    <children>
       <ImageView id="imgHome" fitHeight="53.0" fitWidth="55.0" layoutX="14.0" layoutY="20.0" onMouseClicked="#navigateToHome" pickOnBounds="true" preserveRatio="true">
          <image>
@@ -26,12 +26,6 @@
             <Font name="System Bold" size="24.0" />
          </font>
       </Label>
-      <JFXButton id="btnAddNewItem" layoutX="503.0" layoutY="26.0" onAction="#btnAddNewItem_OnAction" prefHeight="46.0" prefWidth="137.0" text="Add New Item" />
-      <JFXTextField fx:id="txtItemCode" labelFloat="true" layoutX="20.0" layoutY="95.0" prefHeight="28.0" prefWidth="615.0" promptText="Item Code :" />
-      <JFXTextField fx:id="txtDescription" labelFloat="true" layoutX="20.0" layoutY="141.0" prefHeight="28.0" prefWidth="615.0" promptText="Description :" />
-      <JFXTextField fx:id="txtUnitPrice" labelFloat="true" layoutX="20.0" layoutY="189.0" prefHeight="28.0" prefWidth="615.0" promptText="Unit Price :" />
-      <JFXButton id="btnSave" layoutX="265.0" layoutY="285.0" onAction="#btnSave_OnAction" prefHeight="28.0" prefWidth="58.0" text="Save" />
-      <JFXButton id="btnDelete" layoutX="333.0" layoutY="285.0" onAction="#btnDelete_OnAction" text="Delete" />
       <TableView fx:id="tblItems" layoutX="14.0" layoutY="322.0" prefHeight="285.0" prefWidth="627.0">
          <columns>
             <TableColumn prefWidth="97.0" text="Code" />
@@ -40,6 +34,12 @@
             <TableColumn prefWidth="126.0" text="Qty." />
          </columns>
       </TableView>
-      <JFXTextField fx:id="txtQty" labelFloat="true" layoutX="20.0" layoutY="237.0" prefHeight="28.0" prefWidth="615.0" promptText="Qty." />
+      <Button layoutX="478.0" layoutY="33.0" mnemonicParsing="false" onAction="#btnAddNewItem_OnAction" text="Add new Item" />
+      <TextField fx:id="txtItemCode" layoutX="28.0" layoutY="104.0" prefHeight="31.0" prefWidth="207.0" promptText="Item Code" />
+      <TextField fx:id="txtDescription" layoutX="28.0" layoutY="147.0" prefHeight="31.0" prefWidth="207.0" promptText="Description :" />
+      <TextField fx:id="txtUnitPrice" layoutX="28.0" layoutY="192.0" prefHeight="31.0" prefWidth="207.0" promptText="Unit Price :" />
+      <TextField fx:id="txtQty" layoutX="28.0" layoutY="237.0" prefHeight="31.0" prefWidth="207.0" promptText="Qty." />
+      <Button layoutX="272.0" layoutY="271.0" mnemonicParsing="false" onAction="#btnSave_OnAction" text="Save" />
+      <Button layoutX="343.0" layoutY="271.0" mnemonicParsing="false" onAction="#btnDelete_OnAction" text="Delete" />
    </children>
 </AnchorPane>
