--- a/POS-master/POS-master/POS/src/lk/ijse/pos/view/OrderForm.fxml
+++ b/POS-master/POS-master/POS/src/lk/ijse/pos/view/OrderForm.fxml
@@ -1,21 +1,21 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import com.jfoenix.controls.JFXButton?>
-<?import com.jfoenix.controls.JFXComboBox?>
-<?import com.jfoenix.controls.JFXDatePicker?>
-<?import com.jfoenix.controls.JFXTextField?>
 <?import java.net.URL?>
 <?import javafx.scene.Cursor?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ComboBox?>
+<?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.Separator?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.effect.Glow?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.shape.Rectangle?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane id="AnchorPane" prefHeight="599.0" prefWidth="592.0" style="-fx-background-color: white;" styleClass="mainFxmlClass" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="lk.ijse.pos.controller.OrderFormController">
+<AnchorPane id="AnchorPane" prefHeight="599.0" prefWidth="592.0" style="-fx-background-color: white;" styleClass="mainFxmlClass" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="lk.ijse.pos.controller.OrderFormController">
     <stylesheets>
         <URL value="@/lk/ijse/pos/view/style/placeorderform.css" />
     </stylesheets>
@@ -38,17 +38,7 @@
          </effect>
       </Label>
       <Separator layoutX="109.0" layoutY="13.0" orientation="VERTICAL" prefHeight="28.0" prefWidth="3.0" />
-      <JFXTextField fx:id="txtOrderID" labelFloat="true" layoutX="20.0" layoutY="72.0" prefHeight="26.0" prefWidth="266.0" promptText="Enter Order ID" />
-      <JFXComboBox fx:id="cmbCustomerID" labelFloat="true" layoutX="20.0" layoutY="123.0" prefHeight="26.0" prefWidth="266.0" promptText="Select Customer ID" />
       <Separator layoutX="15.0" layoutY="174.0" prefHeight="0.0" prefWidth="584.0" />
-      <JFXComboBox fx:id="cmbItemCode" labelFloat="true" layoutX="21.0" layoutY="193.0" prefHeight="26.0" prefWidth="266.0" promptText="Select Item Code" />
-      <JFXTextField fx:id="txtCustomerName" editable="false" labelFloat="true" layoutX="319.0" layoutY="123.0" prefHeight="26.0" prefWidth="283.0" promptText="Customer Name" text=" " />
-      <JFXTextField fx:id="txtDescription" editable="false" labelFloat="true" layoutX="319.0" layoutY="193.0" prefHeight="26.0" prefWidth="283.0" promptText="Item Description" text=" " />
-      <JFXTextField fx:id="txtQtyOnHand" editable="false" labelFloat="true" layoutX="20.0" layoutY="237.0" prefHeight="26.0" prefWidth="266.0" promptText="Qty on Hand" text=" " />
-      <JFXTextField fx:id="txtUnitPrice" editable="false" labelFloat="true" layoutX="319.0" layoutY="237.0" prefHeight="26.0" prefWidth="283.0" promptText="Unit Price" text=" " />
-      <JFXTextField fx:id="txtQty" labelFloat="true" layoutX="20.0" layoutY="283.0" prefHeight="26.0" prefWidth="266.0" promptText="Enter Qty." />
-      <JFXButton layoutX="319.0" layoutY="279.0" onAction="#btnSaveOnAction" prefHeight="30.0" prefWidth="92.0" style="-fx-background-color: #5cb85c;" stylesheets="@style/placeorderform.css" text="Save" textFill="WHITE" />
-      <JFXButton fx:id="btnRemove" layoutX="416.0" layoutY="279.0" onAction="#btnRemoveOnAction" prefHeight="30.0" prefWidth="92.0" style="-fx-background-color: #d9534f;" stylesheets="@style/placeorderform.css" text="Remove" textFill="WHITE" />
       <TableView fx:id="tblOrderDetails" layoutX="19.0" layoutY="322.0" prefHeight="200.0" prefWidth="584.0">
         <columns>
           <TableColumn prefWidth="90.0" text="Item Code" />
@@ -63,7 +53,17 @@
             <Font size="35.0" />
          </font>
       </Label>
-      <JFXButton layoutX="508.0" layoutY="532.0" onAction="#btnPlaceOrderOnAction" prefHeight="54.0" prefWidth="94.0" style="-fx-background-color: #286090;" stylesheets="@style/placeorderform.css" text="Place Order" textFill="WHITE" />
-      <JFXDatePicker fx:id="txtOrderDate" layoutX="321.0" layoutY="72.0" prefHeight="26.0" prefWidth="283.0" />
+      <TextField fx:id="txtOrderID" layoutX="21.0" layoutY="80.0" promptText="Enter Order ID" />
+      <ComboBox fx:id="cmbCustomerID" layoutX="19.0" layoutY="125.0" prefHeight="31.0" prefWidth="187.0" promptText="Select Customer ID" />
+      <ComboBox fx:id="cmbItemCode" layoutX="20.0" layoutY="190.0" prefHeight="31.0" prefWidth="187.0" promptText="Select Item Code" />
+      <TextField fx:id="txtQtyOnHand" layoutX="20.0" layoutY="234.0" promptText="Qty on Hand" />
+      <TextField fx:id="txtQty" layoutX="21.0" layoutY="282.0" promptText="Enter Qty." />
+      <DatePicker fx:id="txtOrderDate" layoutX="376.0" layoutY="73.0" />
+      <TextField fx:id="txtCustomerName" layoutX="409.0" layoutY="125.0" promptText="Customer Name" />
+      <TextField fx:id="txtDescription" layoutX="409.0" layoutY="190.0" promptText="Item Description" />
+      <TextField fx:id="txtUnitPrice" layoutX="409.0" layoutY="234.0" promptText="Unit Price" />
+      <Button layoutX="440.0" layoutY="282.0" mnemonicParsing="false" onAction="#btnSaveOnAction" text="Save" />
+      <Button fx:id="btnRemove" layoutX="525.0" layoutY="282.0" mnemonicParsing="false" onAction="#btnRemoveOnAction" text="Remove" />
+      <Button layoutX="506.0" layoutY="547.0" mnemonicParsing="false" onAction="#btnPlaceOrderOnAction" style="-fx-background-color: lightblue;" text="Place Order" />
    </children>
 </AnchorPane>
